fix: update tests to be compatible with JDK 17